--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -361,3 +361,46 @@ jobs:
 
             chmod +x simple-test
             ./simple-test
+
+  # Windows x86-64 Build Job
+  build-windows-x86-64:
+    name: Build (Windows x86-64)
+    runs-on: windows-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install LLVM/Clang
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          $CLANG_VERSION = "20.0.0"
+          $CLANG_ZIP_URL = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$CLANG_VERSION/LLVM-$CLANG_VERSION-win64.exe"
+          $LLVM_INSTALLER = "LLVM-$CLANG_VERSION-win64.exe"
+
+          Invoke-WebRequest -Uri $CLANG_ZIP_URL -OutFile $LLVM_INSTALLER
+          Start-Process -FilePath $LLVM_INSTALLER -ArgumentList "/S" -Wait
+          Remove-Item $LLVM_INSTALLER
+
+      - name: Add LLVM to PATH
+        shell: pwsh
+        run: |
+          $llvmPath = "C:\Program Files\LLVM\bin"
+          echo "$llvmPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+      - name: Verify Clang installation
+        run: |
+          clang --version
+          clang++ --version
+
+      - name: Build ICU4C
+        run: |
+          .\build-windows-x86-64.bat
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: icu4c-windows-x86-64
+          path: dist\icu4c-*_windows-x86-64_*.zip
+          if-no-files-found: error
+          retention-days: 1
