--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -362,7 +362,7 @@ jobs:
             chmod +x simple-test
             ./simple-test
 
-  # Windows x86-64 Build Job
+  # Windows x86-64 Build Job using Clang
   build-windows-x86-64:
     name: Build (Windows x86-64)
     runs-on: windows-latest
@@ -374,26 +374,27 @@ jobs:
         shell: pwsh
         run: |
           $ErrorActionPreference = "Stop"
-          $CLANG_VERSION = "20.0.0"
-          $CLANG_ZIP_URL = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$CLANG_VERSION/LLVM-$CLANG_VERSION-win64.exe"
-          $LLVM_INSTALLER = "LLVM-$CLANG_VERSION-win64.exe"
+          $CLANG_VERSION = "20.1.4"
+          $LLVM_URL = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$CLANG_VERSION/clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc.tar.xz"
+          $LLVM_ARCHIVE = "clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc.tar.xz"
+          $LLVM_INSTALL_DIR = "C:\llvm"
 
-          Invoke-WebRequest -Uri $CLANG_ZIP_URL -OutFile $LLVM_INSTALLER
-          Start-Process -FilePath $LLVM_INSTALLER -ArgumentList "/S" -Wait
-          Remove-Item $LLVM_INSTALLER
+          Invoke-WebRequest -Uri $LLVM_URL -OutFile $LLVM_ARCHIVE
+          tar -xf $LLVM_ARCHIVE -C "C:\"
+          Rename-Item -Path "C:\clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc" -NewName "llvm"
+          Remove-Item $LLVM_ARCHIVE
 
       - name: Add LLVM to PATH
         shell: pwsh
         run: |
-          $llvmPath = "C:\Program Files\LLVM\bin"
-          echo "$llvmPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "C:\llvm\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Verify Clang installation
         run: |
           clang --version
           clang++ --version
 
-      - name: Build ICU4C
+      - name: Check Clang 20 in build script
         run: |
           .\build-windows-x86-64.bat
 
