--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -376,13 +376,21 @@ jobs:
           $ErrorActionPreference = "Stop"
           $CLANG_VERSION = "20.1.4"
           $LLVM_URL = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$CLANG_VERSION/clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc.tar.xz"
-          $LLVM_ARCHIVE = "clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc.tar.xz"
+          $LLVM_ARCHIVE_XZ = "llvm.tar.xz"
+          $LLVM_ARCHIVE_TAR = "llvm.tar"
           $LLVM_INSTALL_DIR = "C:\llvm"
-
-          Invoke-WebRequest -Uri $LLVM_URL -OutFile $LLVM_ARCHIVE
-          tar -xf $LLVM_ARCHIVE -C "C:\"
-          Rename-Item -Path "C:\clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc" -NewName "llvm"
-          Remove-Item $LLVM_ARCHIVE
+      
+          Invoke-WebRequest -Uri $LLVM_URL -OutFile $LLVM_ARCHIVE_XZ
+      
+          # Extract .tar.xz -> .tar
+          7z e $LLVM_ARCHIVE_XZ -o"." -y
+      
+          # Extract .tar -> folder
+          7z x $LLVM_ARCHIVE_TAR -o"." -y
+      
+          Rename-Item -Path ".\clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc" -NewName "llvm"
+          Move-Item -Path ".\llvm" -Destination $LLVM_INSTALL_DIR
+          Remove-Item $LLVM_ARCHIVE_XZ, $LLVM_ARCHIVE_TAR
 
       - name: Add LLVM to PATH
         shell: pwsh
