--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -366,30 +366,25 @@ jobs:
   build-windows-x86-64:
     name: Build (Windows x86-64)
     runs-on: windows-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install LLVM/Clang
+      - name: Install LLVM/Clang 20.1.4
         shell: pwsh
         run: |
-          $ErrorActionPreference = "Stop"
           $CLANG_VERSION = "20.1.4"
           $LLVM_URL = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$CLANG_VERSION/clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc.tar.xz"
           $LLVM_ARCHIVE_XZ = "llvm.tar.xz"
           $LLVM_ARCHIVE_TAR = "llvm.tar"
           $LLVM_INSTALL_DIR = "C:\llvm"
-      
+
           Invoke-WebRequest -Uri $LLVM_URL -OutFile $LLVM_ARCHIVE_XZ
-      
-          # Extract .tar.xz -> .tar
           7z e $LLVM_ARCHIVE_XZ -o"." -y
-      
-          # Extract .tar -> folder
           7z x $LLVM_ARCHIVE_TAR -o"." -y
-      
-          Rename-Item -Path ".\clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc" -NewName "llvm"
-          Move-Item -Path ".\llvm" -Destination $LLVM_INSTALL_DIR
+          Rename-Item "clang+llvm-$CLANG_VERSION-x86_64-pc-windows-msvc" llvm
+          Move-Item .\llvm $LLVM_INSTALL_DIR
           Remove-Item $LLVM_ARCHIVE_XZ, $LLVM_ARCHIVE_TAR
 
       - name: Add LLVM to PATH
@@ -397,24 +392,21 @@ jobs:
         run: |
           echo "C:\llvm\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
-      - name: Verify Clang installation
-        run: |
-          clang --version
-          clang++ --version
-      
-      - name: Prepare ICU source (Windows)
+      - name: Setup MSVC environment
+        uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Prepare ICU source
         shell: pwsh
-        run: |
-          .\prepare-icu4c-source.ps1
+        run: .\prepare-icu4c-source.ps1
 
-      - name: Check Clang 20 in build script
-        run: |
-          .\build-windows-x86-64.ps1
+      - name: Build ICU with Clang
+        shell: pwsh
+        run: .\build-windows-x86-64.ps1
 
-      - name: Upload build artifact
+      - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
         with:
           name: icu4c-windows-x86-64
-          path: dist\icu4c-*_windows-x86-64_*.zip
+          path: dist\icu4c-windows-x86-64_clang-20.zip
           if-no-files-found: error
           retention-days: 1
