Fix Windows and Linux Arm test build.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -312,4 +312,6 @@ jobs:
         shell: pwsh
         run: |
           # Run the test executable
+          dir
+          dir tests
           .\simple-test.exe
