--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -312,6 +312,4 @@ jobs:
         shell: pwsh
         run: |
           # Run the test executable
-          dir
-          dir tests
-          .\simple-test.exe
+          simple-test.exe
