--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -323,4 +323,4 @@ jobs:
         shell: pwsh
         run: |
           # Run the test executable
-          simple-test.exe
+          ./simple-test.exe
