--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -290,6 +290,14 @@ jobs:
           path: dist/icu4c-*_windows-x86-64_*.zip
           if-no-files-found: error
           retention-days: 1
+      
+      - name: Upload build log
+        uses: actions/upload-artifact@v4
+        with:
+          name: icu4c-windows-x86-64-build-log
+          path: build/build-windows-x86-64/build.log
+          if-no-files-found: error
+          retention-days: 1
 
   # Windows x86-64 Build Test Job
   build-test-windows-x86-64:
